--- a/KS_1.1.2-检查专用版本/WebRoot/WEB-INF/classes/.gitignore
+++ b/KS_1.1.2-检查专用版本/WebRoot/WEB-INF/classes/.gitignore
@@ -1,5 +1,12 @@
+/DataExchange/
+/Entrance/
+/com/
+/controller/
+/middleware/
+/mutiThread/
 /org/
 /read/
+/testKS/
 /utils/
 /visual/
 /visual_data/
