--- a/KS_1.1.2/WebRoot/WEB-INF/classes/.gitignore
+++ b/KS_1.1.2/WebRoot/WEB-INF/classes/.gitignore
@@ -1,3 +1,5 @@
+/logback.xml
+/visual/
 /DataExchange/
 /Entrance/
 /com/
@@ -8,5 +10,5 @@
 /read/
 /testKS/
 /utils/
-/visual/
 /visual_data/
+/说明.txt
